# lus-laboris-py

./: .env_example  .gitignore  .gitleaksignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  README_ES.md  pyproject.toml
.github/workflows/: README.md  act_menu.sh  ci.yml  code-quality.yml  deploy-qdrant.yml  docker-api-build-publish.yml  docker-processing-build-publish.yml  terraform-apply-on-tf-change.yml  update-api-secrets-deploy.yml  update-batch-job-image.yml
data/: README.md  README_ES.md
data/evaluation/: README.md  ground_truth_n50.json
data/processed/: README.md  README_ES.md
data/raw/: README.md  README_ES.md
deploy/: Dockerfile.dlt  Dockerfile.fastapi  README.md  README_ES.md
docs/: README.md  act_guide.md  code_quality_guide.md  docker_compose_guide.md  docker_guide.md  docker_hub_guide.md  fastapi_guide.md  gcp_resources_guide.md  github_actions_guide.md  phoenix_guide.md  project_architecture.md  qdrant_guide.md  setup_gcp_project.md  uv_guide.md
docs/images/: README.md
evaluation/: README.md  README_ES.md
notebooks/: 01_extract_law_text.ipynb  02_vectorstore_embedding_exploration.ipynb  03_rag_pipeline_evaluation.ipynb  README.md  README_ES.md  embedding_analysis_results_15092025.json  pyproject.toml
services/: README.md  manage_services.sh
services/monitoring/: README.md  docker-compose.yml
services/vectordb/: README.md  docker-compose.yml
src/: README.md
src/api/: README.md  README_ES.md
src/core/: README.md  README_ES.md
src/lus_laboris_api/: Dockerfile  README.md  docker-compose.yml  docker_build_push.sh  pyproject.toml  start_api_dev.sh
src/lus_laboris_api/api/: __init__.py  config.py  main.py
src/lus_laboris_api/api/auth/: jwt_handler.py  security.py
src/lus_laboris_api/api/endpoints/: __init__.py  health.py  rag.py  status.py  vectorstore.py
src/lus_laboris_api/api/models/: __init__.py  requests.py  responses.py
src/lus_laboris_api/api/services/: embedding_service.py  evaluation_service.py  gcp_service.py  phoenix_service.py  qdrant_service.py  rag_service.py  reranking_service.py
src/lus_laboris_api/api/utils/: __init__.py  cache.py
src/processing/: .dockerignore  Dockerfile  README.md  README_ES.md  docker_build_push.sh  extract_law_text.py  pyproject.toml
src/vectorstore/: README.md  README_ES.md
terraform/: .terraform.lock.hcl  README.md  main.tf  providers.tf  tf_menu.sh  variables.tf
terraform/modules/cloud_run_job/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run_service/: main.tf  outputs.tf  variables.tf
terraform/modules/compute_engine/: main.tf  outputs.tf  variables.tf
terraform/modules/gcs/: main.tf  outputs.tf  variables.tf
terraform/modules/secret_manager/: main.tf  outputs.tf  variables.tf
tests/: README.md  README_ES.md  conftest.py  pyproject.toml
tests/integration/: integration_test_e2e.sh
tests/unit/: test_health_endpoints.py  test_rag_endpoints.py  test_status_endpoints.py  test_vectorstore_endpoints.py
utils/: README.md  gcp_utils.py  generate_jwt_keys.sh  generate_jwt_token.py  mi_infra.py  mi_pipeline.py  pyproject.toml  setup_gcp_project.sh  setup_jwt_token.sh
