[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chardet>=5.2.0",
    "ftfy>=6.3.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "qdrant-client>=1.15.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
]
