[project]
name = "utils"
version = "0.1.0"
description = "Utility scripts for GCP management and JWT token generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
    "google-cloud-storage>=3.3.1",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "bandit[toml]>=1.8.0",
]
