[project]
name = "lus-laboris-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.1",
    "fastapi>=0.116.2",
    "google-cloud-storage>=3.4.0",
    "google-genai>=1.39.1",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "slowapi>=0.1.9",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

