[project]
name = "lus-laboris-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=12.3.0",
    "arize-phoenix-otel>=0.13.1",
    "cryptography>=46.0.1",
    "fastapi>=0.116.2",
    "google-cloud-storage>=3.4.0",
    "google-genai>=1.39.1",
    "openai>=1.109.1",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-google-genai>=0.3b0",
    "opentelemetry-instrumentation-openai>=0.47.3",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "slowapi>=0.1.9",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

