[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=12.0.0",
    "arize-phoenix-otel>=0.13.1",
    "beautifulsoup4>=4.13.5",
    "ftfy>=6.3.1",
    "google-cloud-storage>=3.3.1",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "requests>=2.32.5",
]
