[project]
name = "processing"
version = "0.1.0"
description = "Legal text extraction and processing scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=12.0.0",
    "arize-phoenix-otel>=0.13.1",
    "beautifulsoup4>=4.13.5",
    "ftfy>=6.3.1",
    "google-cloud-storage>=3.3.1",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "bandit[toml]>=1.8.0",
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
]
